Include benchmark tests

--- a/notebooks/OLS-vs-PSO.ipynb
+++ b/notebooks/OLS-vs-PSO.ipynb
@@ -44,7 +44,9 @@
     "\n",
     "# Evaluation of the model\n",
     "import sklearn.model_selection\n",
-    "from twlearn.metrics import Rmse, Mae, five_by_two_cv"
+    "from twlearn.metrics import Rmse, Mae, five_by_two_cv\n",
+    "NO_FOLDS = 2\n",
+    "NO_REPEATS = 5"
    ]
   },
   {
@@ -197,21 +199,90 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cross_validate(no_repeats, no_folds, loss, kwargs):\n",
+    "    \"\"\"\n",
+    "    Approach:\n",
+    "        We want the random numbers for repeat 1 to be different for repeat 2, etc\n",
+    "        however we also want the random numbers for repeat 1, to be the same\n",
+    "        each time we run the cross_validation to ensure we can compare algorithm\n",
+    "        performance. We therefore set the seed to be the repeat number.\n",
+    "    \"\"\"  \n",
+    "    boston = load_boston()\n",
+    "\n",
+    "    X = np.array(boston.data)\n",
+    "    Y = np.array(boston.target)\n",
+    "\n",
+    "    no_examples, no_features = X.shape\n",
+    "\n",
+    "    cv_results = {}\n",
+    "\n",
+    "    for repeat in range(NO_REPEATS):\n",
+    "        print(f\"repeat: {repeat}\")\n",
+    "        \n",
+    "        np.random.seed(repeat)\n",
+    "        folds = np.random.randint(low = 0, high = NO_FOLDS , size = no_examples)\n",
+    "        \n",
+    "        cv_results[repeat] = {}\n",
+    "  \n",
+    "        for fold in range(NO_FOLDS):\n",
+    "            print(f\"fold: {fold}\")\n",
+    "\n",
+    "            X_train = X[folds != fold,:]\n",
+    "            X_test  = X[folds == fold,:]\n",
+    "            Y_train = Y[folds != fold]\n",
+    "            Y_test  = Y[folds == fold]           \n",
+    "\n",
+    "            # train model\n",
+    "            model = LinearRegression()\n",
+    "            model.fit(X_train, Y_train, **kwargs)\n",
+    "\n",
+    "            # evaluate model\n",
+    "            cv_results[repeat][fold] = evaluate(model, X_test, Y_test, loss)\n",
+    "\n",
+    "    return cv_results"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from twlearn.metrics import Cautious\n",
+    "CUSTOM_LOSS = Cautious\n",
+    "\n",
+    "print(\"Training OLS Model\")\n",
+    "ols_results = cross_validate(no_repeats = NO_REPEATS, no_folds = NO_FOLDS, loss = CUSTOM_LOSS, \n",
+    "                             kwargs = {\"optimiser\":\"OLS\"})\n",
+    "\n",
+    "print(\"OLS Results\")\n",
+    "print(ols_results)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Training PSO Model\")\n",
+    "pso_results = cross_validate(no_repeats = NO_REPEATS, no_folds = NO_FOLDS, loss = CUSTOM_LOSS,\n",
+    "                             kwargs = {\"optimiser\":'PSO', \"loss\":CUSTOM_LOSS, \"num_iterations\":5000, \"no_particles\":500})\n",
+    "\n",
+    "print(\"PSO Results\")\n",
+    "print(pso_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\" t_statistic {five_by_two_cv(ols_results, pso_results)}\")"
+   ]
   },
   {
    "cell_type": "code",
