--- a/notebooks/OLS-vs-PSO.ipynb
+++ b/notebooks/OLS-vs-PSO.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "# Evaluation of the model\n",
     "import sklearn.model_selection\n",
-    "from twlearn.metrics import Rmse, Mae, five_by_two_cv\n",
+    "from twlearn.metrics import Rmse\n",
     "NO_FOLDS = 2\n",
     "NO_REPEATS = 5"
    ]
@@ -135,6 +135,73 @@
    "metadata": {},
    "source": [
     "Ok lets try optimising a different error metric - mean absolute error, using the num_iterations and no_particles from above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Mae(predictions, actual):\n",
+    "    \"\"\"\n",
+    "    Calculate Mean Absolute Error\n",
+    "\n",
+    "    Arguments:\n",
+    "        predictions: predictions numpy array of size (no_examples, no_solutions)\n",
+    "        actuals: 1D numpy array of size (no_examples, 1)\n",
+    "\n",
+    "    Returns:\n",
+    "        mae: Mean absolute Error for each solution - numpy array of size (1, no_solutions)\n",
+    "    \n",
+    "    Approach:\n",
+    "    predictions can be a 1d array which corresponds to one set of model predictions OR\n",
+    "    it can be a matrix of predictions, where each column represents a set of predictions\n",
+    "    for a specific model. \n",
+    "    \"\"\"\n",
+    "    assert(predictions.shape[0] == actual.shape[0])\n",
+    "    if len(predictions.shape) == 1:\n",
+    "        predictions = predictions.reshape(-1, 1)\n",
+    "    if len(actual.shape) == 1:\n",
+    "        actual = actual.reshape(-1, 1)\n",
+    "\n",
+    "    absolute_errors = np.abs(predictions - actual)\n",
+    "    assert(absolute_errors.shape == predictions.shape)\n",
+    "\n",
+    "    return np.mean(absolute_errors, axis = 0, keepdims = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unittest\n",
+    "\n",
+    "class Test_1D_solution(unittest.TestCase):\n",
+    "    \"\"\" Test when predictions argument contains one set of solutions\"\"\"\n",
+    "    def setUp(self):\n",
+    "        self.predictions = np.array([1, 2, 3])\n",
+    "        self.actuals = np.array([0.9, 2.2, 2.7])\n",
+    "\n",
+    "    def test_Mae(self):\n",
+    "        mae = Mae(self.predictions, self.actuals)\n",
+    "        self.assertIsNone(np.testing.assert_allclose(mae, 0.2))\n",
+    "        \n",
+    "class Test_2D_solutions(unittest.TestCase):\n",
+    "    \"\"\" Test when predictions argument contains two set of solutions\"\"\"\n",
+    "    def setUp(self):\n",
+    "        self.predictions = np.array([[1,1], [2, 2], [3, 3]])\n",
+    "        self.actuals = np.array([0.9, 2.2, 2.7])\n",
+    "\n",
+    "    def test_Mae(self):\n",
+    "        mae = Mae(self.predictions, self.actuals)\n",
+    "        self.assertIsNone(np.testing.assert_allclose(mae, np.array([[0.2, 0.2]])))\n",
+    "        \n",
+    "# run tests\n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main(argv=['first-arg-is-ignored'], exit=False)"
    ]
   },
   {
@@ -244,35 +311,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train models "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from twlearn.metrics import Cautious\n",
-    "CUSTOM_LOSS = Cautious\n",
+    "CUSTOM_LOSS = Mae\n",
     "\n",
     "print(\"Training OLS Model\")\n",
     "ols_results = cross_validate(no_repeats = NO_REPEATS, no_folds = NO_FOLDS, loss = CUSTOM_LOSS, \n",
     "                             kwargs = {\"optimiser\":\"OLS\"})\n",
     "\n",
-    "print(\"OLS Results\")\n",
-    "print(ols_results)\n",
+    "print(\"Training PSO Model\")\n",
+    "pso_results = cross_validate(no_repeats = NO_REPEATS, no_folds = NO_FOLDS, loss = CUSTOM_LOSS,\n",
+    "                             kwargs = {\"optimiser\":'PSO', \"loss\":CUSTOM_LOSS, \"num_iterations\":5000, \"no_particles\":500})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Comparing Models using Mean Absolute Error\")\n",
+    "for repeat in range(NO_REPEATS):\n",
+    "    for fold in range(NO_FOLDS):\n",
+    "        print(f\"Error for repeat {repeat} fold {fold}: OLS: {np.round(ols_results[repeat][fold],2)} PSO: {np.round(pso_results[repeat][fold],2)} difference : {np.round(ols_results[repeat][fold] - pso_results[repeat][fold],2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from twlearn.metrics import five_by_two_cv\n",
+    "from scipy import stats\n",
+    "\n",
+    "t_statistic, average_differences = five_by_two_cv(ols_results, pso_results)\n",
+    "p_value = (1 - stats.t.cdf(t_statistic, df=5)) * 2\n",
+    "\n",
+    "print(f\"The t statistic is {np.round(t_statistic,2)} which has a p value of {p_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(\"Training PSO Model\")\n",
-    "pso_results = cross_validate(no_repeats = NO_REPEATS, no_folds = NO_FOLDS, loss = CUSTOM_LOSS,\n",
-    "                             kwargs = {\"optimiser\":'PSO', \"loss\":CUSTOM_LOSS, \"num_iterations\":5000, \"no_particles\":500})\n",
-    "\n",
-    "print(\"PSO Results\")\n",
-    "print(pso_results)"
+    "Lets have a look at the distribution of error vs actual values. What if we really didn't want to underpredict at the high actual values? <insert image>"
    ]
   },
   {
@@ -281,7 +383,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\" t_statistic {five_by_two_cv(ols_results, pso_results)}\")"
+    "def fourth_quadrant(predictions, actual, multiplier = 100):\n",
+    "    \"\"\"\n",
+    "    Calculate Mean Absolute Error\n",
+    "\n",
+    "    Arguments:\n",
+    "        predictions: predictions numpy array of size (no_examples, no_particles)\n",
+    "        actuals: 1D numpy array of size (no_examples, 1)\n",
+    "        multiplier: int - how much weight to give underpredictions for positive actual values\n",
+    "\n",
+    "    Returns:\n",
+    "        mae: mae for each particle - numpy array of size (1, no_particles)\n",
+    "    \"\"\"\n",
+    "    assert(predictions.shape[0] == actual.shape[0])\n",
+    "\n",
+    "    if len(predictions.shape) == 1:\n",
+    "        predictions = predictions.reshape(-1, 1)\n",
+    "    if len(actual.shape) == 1:\n",
+    "        actual = actual.reshape(-1, 1)\n",
+    "     \n",
+    "    errors = predictions - actual\n",
+    "    assert(errors.shape == predictions.shape)\n",
+    " \n",
+    "    negative_error_index = errors < 0\n",
+    "    positive_actual_index = actual > 0\n",
+    "\n",
+    "    extra_weight_index = np.logical_and(negative_error_index, positive_actual_index)\n",
+    "\n",
+    "    # cautious adjustment\n",
+    "    adjustment = np.ones(shape = errors.shape)\n",
+    "    adjustment[extra_weight_index] = multiplier\n",
+    "\n",
+    "    # squared error with adjustment\n",
+    "    adjusted_squared_error = np.multiply(np.square(errors), adjustment)\n",
+    "\n",
+    "    return np.mean(adjusted_squared_error, axis = 0, keepdims = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: test or show example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CUSTOM_LOSS = fourth_quadrant\n",
+    "\n",
+    "print(\"Training OLS Model\")\n",
+    "ols_results = cross_validate(no_repeats = NO_REPEATS, no_folds = NO_FOLDS, loss = CUSTOM_LOSS, \n",
+    "                             kwargs = {\"optimiser\":\"OLS\"})\n",
+    "\n",
+    "print(\"Training PSO Model\")\n",
+    "pso_results = cross_validate(no_repeats = NO_REPEATS, no_folds = NO_FOLDS, loss = CUSTOM_LOSS,\n",
+    "                             kwargs = {\"optimiser\":'PSO', \"loss\":CUSTOM_LOSS, \"num_iterations\":5000, \"no_particles\":500})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Comparing Models using Fourth Quadrant Error\")\n",
+    "for repeat in range(NO_REPEATS):\n",
+    "    for fold in range(NO_FOLDS):\n",
+    "        print(f\"Error for repeat {repeat} fold {fold}: OLS: {np.round(ols_results[repeat][fold],2)} PSO: {np.round(pso_results[repeat][fold],2)} difference : {np.round(ols_results[repeat][fold] - pso_results[repeat][fold],2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_statistic, average_differences = five_by_two_cv(ols_results, pso_results)\n",
+    "p_value = (1 - stats.t.cdf(t_statistic, df=5)) * 2\n",
+    "\n",
+    "print(f\"The t statistic is {np.round(t_statistic,2)} which has a p value of {p_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  N.B. We did not consider a one sided P value here because we could not be absolutely certain that the rats would all benefit from a high protein diet in comparison with those on a low protein diet."
    ]
   },
   {
