Bring benchmark script in line with notebook

--- a/notebooks/OLS-vs-PSO.ipynb
+++ b/notebooks/OLS-vs-PSO.ipynb
@@ -746,6 +746,15 @@
    "source": [
     "def cross_validate(no_repeats, no_folds, loss, kwargs):\n",
     "    \"\"\"\n",
+    "    Arguments:\n",
+    "        no_repeats - int - number of cross validation repeats\n",
+    "        no_folds - int - number of cross validation folds\n",
+    "        loss - function - loss function to evaluate predictions\n",
+    "        kwargs - dict - settings required for the fit function of OLS and PSO implementations\n",
+    "        \n",
+    "    Returns:\n",
+    "        cv_results: dict - cross validation results\n",
+    "        \n",
     "    Approach:\n",
     "        We want the random numbers for repeat 1 to be different for repeat 2, etc\n",
     "        however we also want the random numbers for repeat 1, to be the same\n",
@@ -761,15 +770,15 @@
     "\n",
     "    cv_results = {}\n",
     "\n",
-    "    for repeat in range(NO_REPEATS):\n",
+    "    for repeat in range(no_repeats):\n",
     "        print(f\"repeat: {repeat}\")\n",
     "        \n",
     "        np.random.seed(repeat)\n",
-    "        folds = np.random.randint(low = 0, high = NO_FOLDS , size = no_examples)\n",
+    "        folds = np.random.randint(low = 0, high = no_folds , size = no_examples)\n",
     "        \n",
     "        cv_results[repeat] = {}\n",
     "  \n",
-    "        for fold in range(NO_FOLDS):\n",
+    "        for fold in range(no_folds):\n",
     "            print(f\"fold: {fold}\")\n",
     "\n",
     "            X_train = X[folds != fold,:]\n",
