--- a/notebooks/OLS-vs-PSO.ipynb
+++ b/notebooks/OLS-vs-PSO.ipynb
@@ -22,6 +22,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"images/error_quadrant_no_colour.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We have\n",
     "- Underpredictions - Quadrants 1 and 2\n",
     "- Overpredictions - Quadrants 3 and 4\n",
