--- a/notebooks/OLS-vs-PSO.ipynb
+++ b/notebooks/OLS-vs-PSO.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/error_quadrant_no_colour.png">"
+    "<img src=\"images/error_quadrant_no_colour.png/">"
    ]
   },
   {
