Include images in sub folder of notebook

--- a/notebooks/OLS-vs-PSO.ipynb
+++ b/notebooks/OLS-vs-PSO.ipynb
@@ -19,6 +19,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "![title](images/error_quadrant_no_colour.png)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
